# AlterBard

./: .env  .gitignore  application.yml  application2.yml  authors_list.json  fantasy_list.txt  fantasy_list_old.txt  init.py  multidict-6.0.4-cp312-cp312-win_amd64.whl  music_cog.py  nohup.out  party_list.txt  pyproject.toml  requirements.txt  test_list.txt
cogs/: general.py  music.py  music_cog.py  music_old.py
functions/: functions_general.py
globals/: globalvariables.py
old/: music.py
server/: server.py
utilities/: helpers.py
