[tool.poetry]
name = "alterbard"
version = "0.1.0"
description = ""
authors = ["nirfer13 <86719868+nirfer13@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
discord ="2.3.2"
ffmpeg="1.4"
lavalink="4.0.6"
wavelink="2.6.3"
yarl="1.8.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
